<resources>
    <string name="app_name">MyWardrobe</string>
    <string name="title_home">Home</string>
    <string name="title_addNew">Add</string>
    <string name="title_settings">Settings</string>
    <string name="lorem" translatable="false">Outfit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login with</string>
    <!--    <string name="default_web_client_id" translatable="false">627965274843-k7v744n0rgidqmtu2gdfc7lbnlroeiam.apps.googleusercontent.com</string>-->
    <string name="login_button">Login</string>
    <string name="login_google" translatable="false">Google</string>
    <string name="login_facebook" translatable="false">Facebook</string>
    <string name="login_guest" translatable="false">Guest</string>
    <string name="loc_en" translatable="false">EN</string>
    <string name="loc_mk" translatable="false">MK</string>
    <string name="select_lang">Select Language</string>
    <string name="chooselogin">or</string>
    <string name="description">Enter Description</string>
    <string name="recipetitle">Enter Title</string>
    <string name="ingredients">Enter Outfit</string>
    <string name="addnewtitle">Add New Outfit</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_favorites">Favorites</string>
    <string name="facebook_app_id" translatable="false">3407072229554540</string>
    <string name="authorName" translatable="false">Elena Gjorgovska</string>


</resources>